Increase hover z-index to avoid overlap

--- a/skinValidate.less
+++ b/skinValidate.less
@@ -18,7 +18,7 @@
 				&:hover {
 					// So user can see it even when it is under another element
 					position: relative;
-					z-index: 1;
+					z-index: 101; // High enough that it is always at the top
 					background: var( --color-skinjson-surface--hover );
 				}
 
